--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,7 @@
 {% block body %}
 <div class="container">
     <h1>{{ devnet_main }}</h1>
+    <h3>实例ID: <strong style="color: green">{{ instance_id }}</strong></h3>
+    <h3>区域&nbsp;&nbsp;&nbsp;&nbsp;: <strong style="color: red">{{ availability_zone }}</strong></h3>
 </div>
 {% endblock body %}
