--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
-    <link rel="shortcut icon" href="https://webapp-aws.s3.ap-northeast-2.amazonaws.com//static/images/favicon.ico">
+    <link rel="shortcut icon" href="https://webapplication-ecs.s3.ap-south-1.amazonaws.com/static/images/favicon.ico">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
