--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     {% block js %}{% endblock js %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-     <a href="/" class="float-left"><img src="https://webapp-aws.s3.ap-northeast-2.amazonaws.com//static/images/logo_long_new.png" height="50" width=auto></a>
+     <a href="/" class="float-left"><img src="https://webapplication-ecs.s3.ap-south-1.amazonaws.com/static/images/hewlett.png" height="50" width=auto></a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
